--- a/plugin.xml
+++ b/plugin.xml
@@ -2,7 +2,7 @@
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
         id="cordova-plugin-keychain-touch-id"
 		version="3.3.0">
-    <name>TouchID and Keychain</name>
+    <name>TouchID and Keychain (Cyclos patch)</name>
 	  <author>S.J.Hoeksma</author>
     <description>TouchID and Keychain cordova plugin for iOS</description>
     <license>Apache 2.0</license>
@@ -11,8 +11,8 @@
       <engine name="cordova" version=">=3.0.0"/>
     </engines>
 
-    <repo>https://github.com/sjhoeksma/cordova-plugin-keychain-touch-id.git</repo>
-    <issue>https://github.com/sjhoeksma/cordova-plugin-keychain-touch-id/issues</issue>
+    <repo>https://github.com/cyclosproject/cordova-plugin-keychain-touch-id.git</repo>
+    <issue>https://github.com/cyclosproject/cordova-plugin-keychain-touch-id/issues</issue>
 	  <js-module src="www/touchid.js" name="TouchID">
         <clobbers target="window.plugins.touchid" />
     </js-module>
